[gd_scene load_steps=5 format=3 uid="uid://bgrqj32tibok0"]

[ext_resource type="Script" uid="uid://dnu2i04hrhd01" path="res://_scripts/RiftGrid.gd" id="1_exr2v"]
[ext_resource type="Script" uid="uid://dm44e4xnwpkd1" path="res://_scripts/managers/grid_position_selector.gd" id="2_exr2v"]
[ext_resource type="Script" uid="uid://b8w3xx7rbfgxj" path="res://_scripts/deck.gd" id="3_l8qsw"]
[ext_resource type="PackedScene" uid="uid://c3e8058lwu0a" path="res://_scenes/card/card.tscn" id="4_o8edh"]

[node name="RiftGrid" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_exr2v")

[node name="GridPositionSelector" type="Node" parent="."]
script = ExtResource("2_exr2v")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -442.0
offset_top = -46.0
offset_right = -442.0
offset_bottom = -46.0
grow_horizontal = 0
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="DiscardPile" type="Node2D" parent="Control"]
script = ExtResource("3_l8qsw")
flipped = true
metadata/_custom_type_script = "uid://b8w3xx7rbfgxj"

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 399.0
offset_top = -39.0
offset_right = 399.0
offset_bottom = -39.0
grow_horizontal = 0
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="DrawPile" type="Node2D" parent="Control2"]
script = ExtResource("3_l8qsw")
metadata/_custom_type_script = "uid://b8w3xx7rbfgxj"

[node name="GridContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="GridContainer"]
anchors_preset = 0

[node name="Card" parent="GridContainer/Control" instance=ExtResource("4_o8edh")]

[node name="Control2" type="Control" parent="GridContainer"]
anchors_preset = 0
offset_left = 140.0
offset_right = 140.0

[node name="Card" parent="GridContainer/Control2" instance=ExtResource("4_o8edh")]

[node name="Control3" type="Control" parent="GridContainer"]
anchors_preset = 0
offset_left = 280.0
offset_right = 280.0

[node name="Card" parent="GridContainer/Control3" instance=ExtResource("4_o8edh")]

[node name="Control4" type="Control" parent="GridContainer"]
anchors_preset = 0
offset_top = 140.0
offset_bottom = 140.0

[node name="Card" parent="GridContainer/Control4" instance=ExtResource("4_o8edh")]

[node name="Control5" type="Control" parent="GridContainer"]
anchors_preset = 0
offset_left = 140.0
offset_top = 140.0
offset_right = 140.0
offset_bottom = 140.0

[node name="Card" parent="GridContainer/Control5" instance=ExtResource("4_o8edh")]

[node name="Control6" type="Control" parent="GridContainer"]
anchors_preset = 0
offset_left = 280.0
offset_top = 140.0
offset_right = 280.0
offset_bottom = 140.0

[node name="Card" parent="GridContainer/Control6" instance=ExtResource("4_o8edh")]

[node name="Control7" type="Control" parent="GridContainer"]
anchors_preset = 0
offset_top = 280.0
offset_bottom = 280.0

[node name="Card" parent="GridContainer/Control7" instance=ExtResource("4_o8edh")]

[node name="Control8" type="Control" parent="GridContainer"]
anchors_preset = 0
offset_left = 140.0
offset_top = 280.0
offset_right = 140.0
offset_bottom = 280.0

[node name="Card" parent="GridContainer/Control8" instance=ExtResource("4_o8edh")]

[node name="Control9" type="Control" parent="GridContainer"]
anchors_preset = 0
offset_left = 280.0
offset_top = 280.0
offset_right = 280.0
offset_bottom = 280.0

[node name="Card" parent="GridContainer/Control9" instance=ExtResource("4_o8edh")]
